	-Added Camera.cs
	-Camera functions not yet implemented

//James Friedenberg 3/4/2016 4:58pm
	-Created rectangles to represent the buttons in the pause menu
	-Loaded png content to give the button rectangles a texture representation
	-Made if statements for the buttons changing appearance when mouse is over them

//Dustin Knowlton 3/4/2016 5:10pm
	-Started work on combat in enemy class with PlayerAttack function
	-also added a few attributes to Enemy.cs

//Juri Kiin 3/7/16 10:40 am
	- Added Finite state machine to game1.cs
	- Added singlekeyPress method to use for toggling UI
	- Made the player unable to move if the game is paused.
	- Made player.cs which loads player position and texture and stats from outside the game1 class.

//James Friedenberg 3/7/2016 10:56am
	-Loaded title screen into game and got it hooked up to the menu game state
	-Spacebar changes state from menu to walk
	-Removed unneeded code and img files from the project

//Juri Kiin 3/8/16 11:50 PM
	- Added code to switch into combat mode to test (until enemies are in the level)
	- Added major framework for blocking system.
	- Loaded in arrow textures and added them to a list.

//Dustin Knowlton 3/9/16 4:20 PM
	- Blaze it
	- Camera fully added, except for actual map draw statement (in but not correct, commented out)


//Juri Kiin  3/9/16 4:51 PM
	- Worked on the attack combat.
	- Added a dictionary for future level management.

//James Friedenberg 3/9/2016 5:46pm
	-kek
	-Added edited version of the item, battle, and basic UIs
	-Added broken if statements to allow the user to switch between menus while paused

//Juri Kiin 3/14/16 10:43 AM
	- Changed the gamestates to add for the UI menu's
	- Fixed the UI so it all works nice (Button non functioning.)

// Andrew and Dustin 6:09 PM 
	- Player now animates and moves! 
	- Test map and enemy added, they work. No collision with enemy yet. 
	- UI draw moved, however commented out the draw for the in game UI because you cant see map with it present.
